# bvereborn.com

./: .dockerignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  rust-toolchain
.github/workflows/: build.yml  deploy.bash
src/: errors.rs  headers.rs  main.rs  statics.rs  templating.rs
src/helpers/: mod.rs  os.rs
src/routes/: download.rs  file_validator.rs  mod.rs
templates/: community.hbs  download.hbs  error.hbs  main.hbs  page.hbs  soon.hbs
templates/partials/: header.hbs  navbar.hbs  page.hbs  single.hbs
templates/tools/: file-validator.hbs
