[package]
name = "bve-reborn-site"
version = "0.1.0"
authors = ["Connor Fitzgerald <connorwadefitzgerald@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bve = "0.0.1"
time = "0.1.42"
itertools = "0.9.0"
rocket = "0.4.4"
maplit = "1.0.2"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["helmet", "json", "handlebars_templates"]

[profile.release]
lto = true
codegen-units = 1
incremental = false
